--- a/SSPTraining.Web/appsettings.json
+++ b/SSPTraining.Web/appsettings.json
@@ -5,5 +5,8 @@
 			"Microsoft.AspNetCore": "Warning"
 		}
 	},
-	"AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"SSPTrainingContext": "Server=.;Database=SSPTraining;User Id=App;Password=App@321;"
+	}
 }
