Redis Cache Added .

--- a/SSPTraining.Web/appsettings.json
+++ b/SSPTraining.Web/appsettings.json
@@ -7,6 +7,7 @@
 	},
 	"AllowedHosts": "*",
 	"ConnectionStrings": {
-		"SSPTrainingContext": "Server=.;Database=SSPTraining;User Id=App;Password=App@321;"
+		"SSPTrainingContext": "Server=.;Database=SSPTraining;User Id=App;Password=App@321;",
+		"RedisConnectionString": "localhost:6379"
 	}
 }
