--- a/SSPTraining.Model/SSPTraining.Model.csproj
+++ b/SSPTraining.Model/SSPTraining.Model.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hoorbakht.RedisService" Version="1.1.0" />
     <PackageReference Include="Sieve" Version="2.5.5" />
   </ItemGroup>
 
